--- a/cdn/manifest.json
+++ b/cdn/manifest.json
@@ -1,1 +1,175 @@
-
+{
+  "name": "ToolFinder - Discover Amazing Tools",
+  "short_name": "ToolFinder",
+  "description": "Discover the best tools for your projects. Curated collection of software, apps, and services to boost your productivity.",
+  "version": "1.0.0",
+  "start_url": "/index.html",
+  "scope": "./",
+  "display": "standalone",
+  "orientation": "portrait-primary",
+  "theme_color": "#1e40af",
+  "background_color": "#ffffff",
+  "lang": "en",
+  "dir": "ltr",
+  "categories": ["productivity", "utilities", "business", "developer"],
+  "icons": [
+    {
+      "src": "./cdn/images/icon.png",
+      "sizes": "72x72",
+      "type": "image/png",
+      "purpose": "any maskable"
+    },
+    {
+      "src": "./cdn/images/icon.png",
+      "sizes": "96x96",
+      "type": "image/png",
+      "purpose": "any maskable"
+    },
+    {
+      "src": "./cdn/images/icon.png",
+      "sizes": "128x128",
+      "type": "image/png",
+      "purpose": "any maskable"
+    },
+    {
+      "src": "./cdn/images/icon.png",
+      "sizes": "144x144",
+      "type": "image/png",
+      "purpose": "any maskable"
+    },
+    {
+      "src": "./cdn/images/icon.png",
+      "sizes": "152x152",
+      "type": "image/png",
+      "purpose": "any maskable"
+    },
+    {
+      "src": "/cdn/images/icon.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "any maskable"
+    },
+    {
+      "src": "./cdn/images/icon.png",
+      "sizes": "384x384",
+      "type": "image/png",
+      "purpose": "any maskable"
+    },
+    {
+      "src": "/cdn/images/icon.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "any maskable"
+    }
+  ],
+  "screenshots": [
+    {
+      "src": "./cdn/images/screenshot-desktop.png",
+      "sizes": "1280x800",
+      "type": "image/png",
+      "form_factor": "wide",
+      "label": "ToolFinder desktop view showing tool discovery interface"
+    },
+    {
+      "src": "./cdn/images/screenshot-mobile.png",
+      "sizes": "375x812",
+      "type": "image/png",
+      "form_factor": "narrow",
+      "label": "ToolFinder mobile view with responsive design"
+    }
+  ],
+  "shortcuts": [
+    {
+      "name": "Search Tools",
+      "short_name": "Search",
+      "description": "Search for tools by name or category",
+      "url": "./?action=search",
+      "icons": [
+        {
+          "src": "./cdn/images/icon-search.png",
+          "sizes": "192x192",
+          "type": "image/png"
+        }
+      ]
+    },
+    {
+      "name": "Popular Tools",
+      "short_name": "Popular",
+      "description": "View the most popular tools",
+      "url": "./?category=popular",
+      "icons": [
+        {
+          "src": "./cdn/images/icon-popular.png",
+          "sizes": "192x192",
+          "type": "image/png"
+        }
+      ]
+    },
+    {
+      "name": "Design Tools",
+      "short_name": "Design",
+      "description": "Browse design and creative tools",
+      "url": "./?category=design",
+      "icons": [
+        {
+          "src": "./cdn/images/icon-design.png",
+          "sizes": "192x192",
+          "type": "image/png"
+        }
+      ]
+    },
+    {
+      "name": "AI Tools",
+      "short_name": "AI",
+      "description": "Discover AI-powered tools",
+      "url": "./?category=ai",
+      "icons": [
+        {
+          "src": "./cdn/images/icon-ai.png",
+          "sizes": "192x192",
+          "type": "image/png"
+        }
+      ]
+    }
+  ],
+  "related_applications": [
+    {
+      "platform": "web",
+      "url": "https://toolfinder.app"
+    }
+  ],
+  "prefer_related_applications": false,
+  "edge_side_panel": {
+    "preferred_width": 400
+  },
+  "launch_handler": {
+    "client_mode": "focus-existing"
+  },
+  "handle_links": "preferred",
+  "capture_links": "existing-client-navigate",
+  "file_handlers": [
+    {
+      "action": "./",
+      "accept": {
+        "application/json": [".json"],
+        "text/plain": [".txt"]
+      }
+    }
+  ],
+  "protocol_handlers": [
+    {
+      "protocol": "web+toolfinder",
+      "url": "./?tool=%s"
+    }
+  ],
+  "share_target": {
+    "action": "./share",
+    "method": "POST",
+    "enctype": "multipart/form-data",
+    "params": {
+      "title": "title",
+      "text": "text",
+      "url": "url"
+    }
+  }
+}
